--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   mysql:
-    image: mysql:9.3-oracle
+    image: mysql:8.0
     restart: unless-stopped
     ports:
-      - "3306:3306"
+      - "3307:3306"
     volumes:
       - db_mysql:/var/lib/mysql
     environment:
